Fix GCC build by adding flags and removing intel specific intrinsic functions

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -43,6 +43,17 @@ add_executable(NNDemo
 )
 target_link_libraries(NNDemo PUBLIC NeuralNetwork)
 
+if (CMAKE_CXX_COMPILER_ID STREQUAL "Clang")
+  # using Clang
+	set(CMAKE_CXX_FLAGS "-mavx -O3 -pthread")
+elseif (CMAKE_CXX_COMPILER_ID STREQUAL "GNU")
+  # using GCC
+	set(CMAKE_CXX_FLAGS "-mavx -O3 -pthread")
+elseif (CMAKE_CXX_COMPILER_ID STREQUAL "Intel")
+  # using Intel C++
+elseif (CMAKE_CXX_COMPILER_ID STREQUAL "MSVC")
+  # using Visual Studio C++
+endif()
 
 
 if (MSVC)
